ajout d'images + v2 simplifiee

--- a/web/locales/messages.en.yml
+++ b/web/locales/messages.en.yml
@@ -9,7 +9,7 @@ app:
   intro:
     job: Software Engineer
     company: Sopra Steria
-    description: Développeur Java/PHP curieux et enthousiaste, je suis particulièrement intéressé par les nouvelles méthodologies agile/devops/software craftmanshift depuis quelques temps. Assistant régulièrement à des meetups et des conférences, j'essaie d'amener de la rigueur, de l'exigence et de la bonne humeur au sein des projets auxquels je participe.
+    description: Développeur Java/PHP avant tout, curieux de nouvelles technologies et de nouvelles méthodologies de type agile/devops/craftmanshift. Sportif à mes heures perdues.
   about:
     firstname: First name
     lastname: Last name
